# cfa-stf-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
cfa/stf/data/: __init__.py  _utils.py  get_data.py  get_nnh_pmfs.py  get_nssp_with_exclusion.py
src/cfa/stf/data/: __init__.py  _utils.py  locations.py
src/cfa/stf/data/data/: us_location_population.csv
tests/cfa/stf/data/: data_test_utils.py  test_get_nhsn_hrd.py  test_get_nnh_pmfs.py  test_get_nssp.py
