[project]
name = "cfa-stf-data"
version = "0.0.1"
requires-python = ">=3.13,<3.14"


dependencies = [
    "cfa-cloudops>=0.5.1",
    "cfa-dataops",
    "cfa-catalog-public>=2026.05.13.0",
    "polars[pyarrow,numpy]>=1.36",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cfa"]

[tool.hatch.build.targets.sdist]
include = ["src/cfa", "pyproject.toml"]

[tool.hatch.build.targets.wheel.force-include]
"src/cfa/stf/data/data/us_location_population.csv" = "cfa/stf/data/data/us_location_population.csv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
azuretools = { git = "https://github.com/cdcgov/cfa-azuretools.git" }
cfa-dataops = {git = "https://github.com/CDCgov/cfa-dataops.git", rev="main"}
cfa-cloudops = {git = "https://github.com/CDCgov/cfa-cloudops.git"}
cfa-catalog-public = {git = "https://github.com/cdcgov/cfa-catalog-pub.git"}
