[project]
name = "cfa-stf-data"
version = "0.1.0"
description = "Data access helpers for CFA short-term forecasting."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "CFA STF Team"},
]
dependencies = [
  "cfa.catalog.public",
  "cfa-dataops",
  "numpy>=2.2",
  "polars[pyarrow,numpy]>=1.36",
]

[project.urls]
Repository = "https://github.com/CDCgov/cfa-stf-data"
Issues = "https://github.com/CDCgov/cfa-stf-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["cfa"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  {include-group = "test"},
  "ipykernel",
  "jupyter>=1.0.0",
  "pre-commit>=4.6.0",
]
test = [
  "cfa-cloudops",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.pytest.ini_options]
markers = [
  "catalog: use the real CFA data catalog instead of mocked test data",
]

[tool.uv.sources]
"cfa.catalog.public" = {git = "https://github.com/CDCgov/cfa-catalog-pub", rev = "main"}
cfa-cloudops = {git = "https://github.com/CDCgov/cfa-cloudops", rev = "main" }
cfa-dataops = {git = "https://github.com/CDCgov/cfa-dataops", rev = "main"}
